<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/display" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:autofillHints=""
            android:hint="@string/enter_something"/>
    </LinearLayout>

    <TextView
    android:id="@+id/textViewDisplay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/display_what_the_user_enters"/>

    <ToggleButton
        android:id="@+id/toggleButtonEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="ToggleButton"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled" />

    <RadioGroup
        android:id="@+id/RadioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonGenderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

</LinearLayout>
